VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc7Down.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [24MB/2.258GB][  1%][>                                                 ][8MB/s]  [64MB/2.258GB][  2%][=>                                                ][16MB/s]  [104MB/2.258GB][  4%][==>                                               ][20.8MB/s]  [144MB/2.258GB][  6%][===>                                              ][24MB/s]  [184MB/2.258GB][  7%][===>                                              ][26.29MB/s]  [224MB/2.258GB][  9%][====>                                             ][28MB/s]  [264MB/2.258GB][ 11%][=====>                                            ][29.33MB/s]  [304MB/2.258GB][ 13%][======>                                           ][30.4MB/s]  [336MB/2.258GB][ 14%][=======>                                          ][30.55MB/s]  [368MB/2.258GB][ 15%][=======>                                          ][30.67MB/s]  [408MB/2.258GB][ 17%][========>                                         ][31.38MB/s]  [448MB/2.258GB][ 19%][=========>                                        ][32MB/s]  [488MB/2.258GB][ 21%][==========>                                       ][32.53MB/s]  [536MB/2.258GB][ 23%][===========>                                      ][33.5MB/s]  [584MB/2.258GB][ 25%][============>                                     ][34.35MB/s]  [624MB/2.258GB][ 26%][=============>                                    ][34.67MB/s]  [672MB/2.258GB][ 29%][==============>                                   ][35.37MB/s]  [720MB/2.258GB][ 31%][===============>                                  ][36MB/s]  [760MB/2.258GB][ 32%][================>                                 ][36.19MB/s]  [808MB/2.258GB][ 34%][=================>                                ][36.73MB/s]  [856MB/2.258GB][ 37%][==================>                               ][37.22MB/s]  [904MB/2.258GB][ 39%][===================>                              ][37.67MB/s]  [944MB/2.258GB][ 40%][====================>                             ][37.76MB/s]  [992MB/2.258GB][ 42%][=====================>                            ][38.15MB/s]  [1.016GB/2.258GB][ 44%][======================>                           ][38.52MB/s]  [1.062GB/2.258GB][ 47%][=======================>                          ][38.86MB/s]  [1.109GB/2.258GB][ 49%][========================>                         ][39.17MB/s]  [1.156GB/2.258GB][ 51%][=========================>                        ][39.47MB/s]  [1.203GB/2.258GB][ 53%][==========================>                       ][39.74MB/s]  [1.25GB/2.258GB][ 55%][===========================>                      ][40MB/s]  [1.297GB/2.258GB][ 57%][============================>                     ][40.24MB/s]  [1.352GB/2.258GB][ 59%][=============================>                    ][40.71MB/s]  [1.406GB/2.258GB][ 62%][===============================>                  ][41.14MB/s]  [1.461GB/2.258GB][ 64%][================================>                 ][41.56MB/s]  [1.523GB/2.258GB][ 67%][=================================>                ][42.16MB/s]  [1.578GB/2.258GB][ 69%][==================================>               ][42.53MB/s]  [1.641GB/2.258GB][ 72%][====================================>             ][43.08MB/s]  [1.703GB/2.258GB][ 75%][=====================================>            ][43.6MB/s]  [1.758GB/2.258GB][ 77%][======================================>           ][43.9MB/s]  [1.82GB/2.258GB][ 80%][========================================>         ][44.38MB/s]  [1.883GB/2.258GB][ 83%][=========================================>        ][44.84MB/s]  [1.945GB/2.258GB][ 86%][===========================================>      ][45.27MB/s]  [2.008GB/2.258GB][ 88%][============================================>     ][45.69MB/s]  [2.07GB/2.258GB][ 91%][=============================================>    ][46.09MB/s]  [2.125GB/2.258GB][ 94%][===============================================>  ][46.3MB/s]  [2.188GB/2.258GB][ 96%][================================================> ][46.67MB/s]  [2.25GB/2.258GB][ 99%][=================================================>][47.02MB/s]  [2.258GB/2.258GB][100%][==================================================][47.2MB/s]  [2.258GB/2.258GB][100%][==================================================][47.2MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_49942/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_49942/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
